--- a/css/styles.css
+++ b/css/styles.css
@@ -550,32 +550,36 @@ margin-left: 80px;
                     text-align: center;
                     color: #2e2f42;
                     margin-bottom: 16px;
+                    margin-top: 48px;
                 }
                 .close-modal{
                     position: absolute;
                     top: 24px;
                     right: 24px;
                     border-radius: 100%;
-                    fill: #e7e9fc;
+                    fill: #2E2F42;
                     stroke-width: 1px;
-                    
                     width: 24px;
                     height: 24px;
                     border: none;
                     display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        cursor: pointer;
-                        transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                    justify-content: center;
+                    align-items: center;
+                    cursor: pointer;
+                    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
                 }
                 .close-modal:hover,
                 .close-modal:hover{
-                    stroke: rgba(0, 0, 0, 0.5);
+                    background-color: #404bbf;
+                    stroke: #fff;
+                    fill: #fff;
+
                 }
+          
                 .close-icon{
                     display: block;
-                    fill: #2E2F42;
+                    
                
 
                 }
@@ -596,6 +600,116 @@ margin-left: 80px;
                     letter-spacing: 0.04em;
                     color: #8e8f99;
                     margin-bottom: 4px;
-                                   }
+                    }
+                    .wrapper-icon{
+                        position: relative;
+                    }
+
+                .text-filed{
+                    border: 1px solid rgba(46, 47, 66, 0.4);
+                    border-radius: 4px;
+                    width: 100%;
+                    height: 40px;
+                    background-color: transparent;
+                    padding-left: 38px;
+                    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                    color: #2e2f42 ;
+                }
+                
+                .text-filed:focus{
+                    border-color: #4d5ae5;
+                    outline:none;
+                }
+                .field-icon{
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    left: 16px;
+                }
+                .text-filed:focus + .field-icon {
+                    fill: #4d5ae5;
+                }
+                .comment{
+                    padding-left: 16px;
+                    border: 1px solid rgba(46, 47, 66, 0.4);
+                    border-radius: 4px;
+                    width: 100%;
+                    height: 120px;
+                    resize: none;
+                    background-color: transparent;
+                    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                    outline: none;
+                }
+                .comment::placeholder {
+                    
+                    font-weight: 400;
+                    font-size: 12px;
+                    line-height: 1.17;
+                    letter-spacing: 0.04em;
+                    color: rgba(46, 47, 66, 0.4);
+                }
+                .comment:focus{
+                    border-color: #4d5ae5;
+                }
+                .policy-checkbox:checked+.policy-label>.custom-checkbox{
+                    background-color: #404bbf;
+                    fill: #f4f4fd;
+                    
+                }
+                .policy-label{
+                    
+                    font-weight: 400;
+                    font-size: 12px;
+                    line-height: 117%;
+                    letter-spacing: 0.04em;
+                    color: #8e8f99;
+                }
+                .custom-checkbox{
+                    display: inline-flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 8px;
+                    cursor: pointer;
+                    width: 16px;
+                    height: 16px;
+                    border-radius: 2px;
+                    border: 1px solid rgba(46, 47, 66, 0.4);
+                    fill: transparent;
+                    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                }
+                .vector-icon{
+                    fill: #040418;
+                }
+                .policy-label a{
+                    line-height: 1.33;
+                    text-decoration: underline;
+                    text-decoration-skip-ink: none;
+                    color: #4d5ae5;
+                
+                }
+                .button-form{
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 150%;
+                    letter-spacing: 0.04em;
+                    color: #fff;
+                    background-color: #4d5ae5;
+                    text-align: center;
+                    cursor: pointer;
+                    display: block;
+                    margin-top: 24px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    min-width: 169px;
+                    min-height: 56px;
+                    padding: 16px 32px;
+                    border-radius: 4px;
+                    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+                    height: 56px;
+                    border: none;
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+                }
+
 
          /* #endregion modal-overlay */
