--- a/css/styles.css
+++ b/css/styles.css
@@ -518,9 +518,9 @@ margin-left: 80px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    }
+                    
         
-                   /* opacity: 0;
+                    opacity: 0;
                     pointer-events: none;
                     transition: opacity 250ms ease-in-out;
                 }
@@ -528,7 +528,7 @@ margin-left: 80px;
                 .modal-overlay.is-open {
                     opacity: 1;
                     pointer-events: auto;
-                }*/
+                }
         
                 .modal {
                     position: relative;
