--- a/css/styles.css
+++ b/css/styles.css
@@ -463,12 +463,16 @@ padding: 120px 0}
     width: 453px;
 margin-left: 80px;
 }
-
+.sub-form{
+    display: flex;
+    gap: 24px;
+}
 .sub-email{
     border: 1px solid #fff;
     border-radius: 4px;
     width: 264px;
     height: 40px;
+    border: 1px solid #ffffff;
     background-color: transparent;
     font-weight: 400;
     font-size: 12px;
@@ -479,7 +483,7 @@ margin-left: 80px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .sub-btn{
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 16px;
@@ -490,7 +494,7 @@ margin-left: 80px;
     background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
     color: #fff;
@@ -518,8 +522,9 @@ margin-left: 80px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     
-        
+        /*
                     opacity: 0;
                     pointer-events: none;
                     transition: opacity 250ms ease-in-out;
@@ -527,19 +532,23 @@ margin-left: 80px;
         
                 .modal-overlay.is-open {
                     opacity: 1;
-                    pointer-events: auto;
+                    pointer-events: auto;*/
                 }
         
                 .modal {
-                    position: relative;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
                     overflow: auto;
                     border-radius: 4px;
                     width: 408px;
                     height: 80%;
-                    max-height: 584px;
+                    min-height: 584px;
                     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
                     background-color: #fcfcfc;
-                    padding: 24px;
+                    padding: 72px 24px 24px 24px;
+                    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     
                 }
                 .modal-text{
@@ -550,35 +559,37 @@ margin-left: 80px;
                     text-align: center;
                     color: #2e2f42;
                     margin-bottom: 16px;
-                    margin-top: 48px;
                 }
                 .close-modal{
                     position: absolute;
                     top: 24px;
                     right: 24px;
-                    border-radius: 100%;
+                    border-radius: 50%;
                     fill: #2E2F42;
+                    background-color: #e7e9fc;
+                    border: 1px solid rgba(0, 0, 0, 0.1);
                     stroke-width: 1px;
                     width: 24px;
                     height: 24px;
-                    border: none;
+                    padding: 0;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     cursor: pointer;
-                    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
                 }
                 .close-modal:hover,
-                .close-modal:hover{
+                .close-modal:focus{
                     background-color: #404bbf;
-                    stroke: #fff;
+                    border: none;
                     fill: #fff;
 
                 }
           
                 .close-icon{
                     display: block;
+                    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     
                
 
@@ -614,6 +625,7 @@ margin-left: 80px;
                     padding-left: 38px;
                     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     color: #2e2f42 ;
+                    outline: transparent;
                 }
                 
                 .text-filed:focus{
@@ -625,16 +637,24 @@ margin-left: 80px;
                     top: 50%;
                     transform: translateY(-50%);
                     left: 16px;
+                    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 }
                 .text-filed:focus + .field-icon {
                     fill: #4d5ae5;
                 }
+                .form-wrapper-comment{margin-bottom: 16px}
                 .comment{
                     padding-left: 16px;
                     border: 1px solid rgba(46, 47, 66, 0.4);
                     border-radius: 4px;
                     width: 100%;
                     height: 120px;
+                    font-size: 12px;
+                    line-height: 1.17;
+                    letter-spacing: 0.04em;
+                    color: rgba(46, 47, 66, 0.4);
+                    padding: 8px 16px;
+                    outline: transparent;
                     resize: none;
                     background-color: transparent;
                     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -651,10 +671,13 @@ margin-left: 80px;
                 .comment:focus{
                     border-color: #4d5ae5;
                 }
+                .div-policy{
+                    margin-bottom: 24px;
+                }
                 .policy-checkbox:checked+.policy-label>.custom-checkbox{
                     background-color: #404bbf;
                     fill: #f4f4fd;
-                    
+                    border: none;
                 }
                 .policy-label{
                     
@@ -675,7 +698,7 @@ margin-left: 80px;
                     border-radius: 2px;
                     border: 1px solid rgba(46, 47, 66, 0.4);
                     fill: transparent;
-                    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 }
                 .vector-icon{
                     fill: #040418;
