--- a/css/styles.css
+++ b/css/styles.css
@@ -524,7 +524,7 @@ margin-left: 80px;
                     align-items: center;
                     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     
-        /*
+        
                     opacity: 0;
                     pointer-events: none;
                     transition: opacity 250ms ease-in-out;
@@ -532,7 +532,7 @@ margin-left: 80px;
         
                 .modal-overlay.is-open {
                     opacity: 1;
-                    pointer-events: auto;*/
+                    pointer-events: auto;
                 }
         
                 .modal {
