--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,7 @@ margin-left: 80px;
     display: flex;
     gap: 24px;
 }
+
 .sub-email{
     border: 1px solid #fff;
     border-radius: 4px;
@@ -482,15 +483,20 @@ margin-left: 80px;
     padding-left: 16px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
+.sub-email:focus {
+    border-color: #31d0aa;
+    outline: none;
+}
 .sub-btn{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    
     border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    
     height: 40px;
+    min-width: 165px;
     background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
@@ -500,12 +506,18 @@ margin-left: 80px;
     color: #fff;
     font-size: inherit;
     cursor: pointer;
+    border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
 .sub-btn:hover,
 .sub-btn:focus {
-        background-color: #404bbf;
+        background-color: #31d0aa;
+    }
+    .btn-social-media-svg-footer{
+        fill: #f4f4fd;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        margin-left: 16px;
     }
 
 
